# mckernant1-tools

./: Cargo.toml  README.md
src/: lib.rs
src/crossbeam/: collect.rs  mod.rs  stdin_reader.rs
src/iter/: counting.rs  map.rs  mod.rs
src/time/: elapsed.rs  mod.rs  thread.rs  timing.rs
