[package]
name = "mckernant1-tools"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "My random tools"
rust-version = "1.59.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.1", optional = true }
chrono = { version = "0.4.19", optional = true }
tokio = { version = "1.18.2", optional = true }
log = "0.4.16"

[features]
channels = ["crossbeam", "time"]
time = ["chrono"]
async = ["tokio"]
