[package]
name = "mckernant1-tools"
version = "0.0.7"
edition = "2021"
license = "MIT"
description = "My random tools"
rust-version = "1.59.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.2", optional = true }
chrono = { version = "0.4.26", optional = true }
tokio = { version = "1.29.1", optional = true }
log = "0.4.18"

[features]
channels = ["crossbeam", "chrono"]
time = ["chrono"]
async = ["tokio"]
